styles.css
/* ... */
#bandeau3 p {
    color: white;
    font-weight: 300;
    font-size: 90%;
    letter-spacing: 1px;
    width: 90%;
    margin: 5% auto;
    line-height: 110%;
}

#bandeau2 h1 {
    margin: 20% auto 0 auto
}

#bandeau2 {
    background-image: url(img/qsn.jpg);
    background-repeat: no-repeat;
    background-size: 100%;
    width: 100%;
    height: 65%;
    background-position: 50% 70%;
}

#bandeau2 h1 {
    padding: 2%;
    position: absolute;
    color: white;
    width: 96%;
    background-color: rgba(0, 0, 0, 0.72);
}

#bandeau2 h1 {
    margin: 20% auto 0 auto
}

#bandeau2 {
    background-image: url(img/qsn.jpg);
    background-repeat: no-repeat;
    background-size: 100%;
    width: 100%;
    height: 65%;
    background-position: 50% 70%;
}

#bandeau2 h1 {
    padding: 2%;
    position: absolute;
    color: white;
    width: 96%;
    background-color: rgba(0, 0, 0, 0.72);
}

#bloc_avantage > p, #bandeau3 > p {
    color: black;
    font-size: 1.3em;
    margin: 3% auto;
    width: 90%
}

/*/ AVANTAGES /*/
#bloc_avantage h2 {
    font-weight: 300;
    font-size: 1.3em;
    width: 60%;
    text-align: center
}

#bloc_avantage hr {
    width: 10%;
    margin-top: 1%
}

#bloc_avantage .bloc-avantage-map {
    background-image: url(img/map.png);
    background-attachment: fixed;
    padding: 5% 0% 5% 0%;
    margin-bottom: 70px;
}

.avantage img {
    width: 45%;
    padding: 2%;
}

.avantage > img {
    padding: 5% 2% 2% 2%;
}

.avantage {
    margin: 5% 0 7% 0;
    width: 100%;
    background-color: aliceblue;
    display: inline-block
}

.texte_avantage h3 {
    float: left;
    padding-top: 5%;
    font-weight: normal;
    text-transform: uppercase;
    font-size: 1em;
    letter-spacing: 1.5px;
}

.texte_avantage img {
    width: 15%
}

.texte_avantage {
    width: 45%;
    display: inline-block;
    text-align: justify;
    float: right;
    margin: 1% 4% 1% 0%;
}

#bloc_avantage span {
    font-weight: bold;
}

.check {
    width: 3.5% !important;
    padding: 1% 1% 0% 0% !important;
}

/*/ AVANTAGES /*/
/*/ TEMPORAIRE /*/
.temporaire {
    width: 40%;
    margin: 10% auto;
    background-color: rgba(0, 0, 0, 0.63);
    color: white;
    padding: 1%;
}

.temporaire h1 {
    margin: 2% auto
}

.temporaire p {
    font-size: 0.9em;
    letter-spacing: 1px;
    font-weight: 300;
    text-align: justify;
}

.temporaire .in-write {
    font-style: italic;
    text-align: center;
    margin: 40px 0;
}

.div_temporaire {
    background-image: url(img/qsn.jpg);
    background-attachment: fixed;
    background-size: cover;
}

/*/ TEMPORAIRE /*/
/*/ TABLETTE /*/
.demonstration {
    position: absolute;
    top: 85%;
    color: white;
    z-index: 999;
    font-weight: lighter;
    width: 100%;
    font-size: 1.5em;
}

.demonstration img {
    width: 40px;
}

.demonstration span {
    vertical-align: super;
    padding: 0px 20px 50px 0px;
}

#onglets, #onglets {
    margin: 0;
    padding: 10% 0 2% 0;
}

#onglets .highlight,
#onglets2 .highlight {
    background-color: #4F9EE5;
    color: white;
}

#onglets li, #onglets2 li {
    position: relative;
    list-style: none;
    padding: 15px 15px 15px;
    margin-right: 5px;
    cursor: pointer;
    background-color: aliceblue;
    z-index: 1;
    letter-spacing: 1.3px;
    font-weight: 300;
    display: inline-block;
    color: #151515;
    font-size: 1em;
}

#onglets .actif, #onglets2 .actif {
    border-bottom: none;
    z-index: 10;
    background-color: #1F3D58;
    color: white;
}

#contenu {
    clear: both;
    position: relative;
    z-index: 5;
    top: -16px;
    background-color: rgba(247, 247, 247, 0.51);
    width: 100%;
    overflow: hidden;
    text-align: start;
    margin-bottom: 5%;
}

.item:nth-child(1) h2 {
    margin: 5% auto 2% auto;
    letter-spacing: 15.5px;
    font-weight: 400;
    width: 50%;
    color: #3D3D3D;
}

.item.stepPart p {
    width: 20%;
    text-align: justify;
    display: inline-block;
    margin: 2%;
    font-size: 1.2em;
    font-weight: 300;
    float: none;
    box-shadow: 0 0 15px 0 #eee;
    padding: 5px;
    background-color : #fbfbfb;
}

.tablet1 {
    width: 400px;
    margin-top: 5%
}

.item p > img {
    width: 120px
}

.item:nth-child(1) img, .item:nth-child(3) img, .item:nth-child(4) img, .item:nth-child(5) img {
    width: 45%;
}

.item:nth-child(6) img {
    width: 40%
}

.item:nth-child(7) img {
    width: 50%
}

.item p {
    width: 35%;
    text-align: justify;
    float: right;
    margin-right: 10%;
    font-size: 1.3em;
    font-weight: 300;
}

.item span {
    color: #323232;
    font-weight: bold;
}

.item:nth-child(1) li {
    float: right;
    margin: 3%;
    list-style: none;
    color: #1F3D58;
}

.item.stepPart span {
    font-weight: bold;
    text-transform: uppercase;
    font-size: 1em;
}

.item h2 {
    margin: 5% auto 3% auto;
    letter-spacing: 5.5px;
    font-weight: 400;
    width: 85%;
    color: #3D3D3D;
}

.abonnement {
    width: 350px;
    background-color: aliceblue;
    display: inline-block;
    margin: 1%;
    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.16);
}

.abonnement h3 {
    text-transform: uppercase;
    letter-spacing: 5px;
    font-size: 1.5em;
    color: #4F9EE5
}

.abonnement p {
    font-size: 1.2em;
    margin-top: 5% !important
}

.abonnement span {
    font-size: 3.5em;
    font-weight: normal;
    width: 100%;
    line-height: 300%;
    color: white
}

.item:last-child p {
    width: 85%;
    text-align: center;
    float: none;
    margin: 0 auto 2% auto
}

.abonnement div {
    background-color: rgba(57, 114, 165, 0.45);
    margin: 8% auto;
    width: 180px;
    height: 180px;
    border-radius: 50%
}

.abonnement button {
    margin: 10% auto;
    padding: 10px 10%;
    font-size: 1.2em;
    letter-spacing: 2px;
    display: block;
    width: 55%
}

.abonnement .check {
    width: 5% !important
}

.paginate {
    display: none;
}

#souscription2 {
    display: none;
}
/* ... */

